# boilerplate

./: .env.example  .gitignore  AGENT_PLAYBOOK.md  Dockerfile  Dockerfile.dev  Makefile  NOTICE  README.md  _CODING_GUIDELINES.md  docker-compose.yml  fix-greenlet.sh  바이브코딩_가이드.md
.claude/: README.md  context_files.md  instructions.md  project_knowledge.md  prompts.md  rules.md
.kiro/settings/: mcp.json
backend/: _CODING_GUIDELINES.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  frontend.py  health.py  items.py  items_with_file.py  posts.py  profile.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  item.py  post.py  user.py
backend/app/repositories/: __init__.py  item.py  post.py  user.py
backend/app/schemas/: __init__.py  auth.py  item.py  item_with_file.py  post.py  user.py
backend/app/services/: __init__.py  auth.py  item.py  post.py  profile.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_health.py  test_items.py  test_posts.py
docs/: AI_ASSISTANT_GUIDE.md  CLAUDE_CODE_SKILLS.md  KIRO_INTEGRATION.md  QUICK_START_AI.md
docs/integrations/: MCP_GUIDE.md
docs/prd/: README.md  샘플_블로그_프로젝트.md
docs/userstory/: README.md  블로그_유저스토리.md
frontend/: .eslintrc.cjs  _CODING_GUIDELINES.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: FormDataDemo.tsx
frontend/src/components/ui/: Button.tsx  (+2 more)
frontend/src/hooks/: useAuth.tsx  useFormDataValidation.ts  useItems.ts  usePosts.ts  useProfile.ts
frontend/src/pages/: HomePage.tsx  ItemsPage.tsx  LoginPage.tsx  MyPostsPage.tsx  PostDetailPage.tsx  PostEditorPage.tsx  PostsPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts  authService.ts  itemService.ts  postService.ts  profileService.ts
frontend/src/styles/: index.css
frontend/src/test/: App.test.tsx
frontend/src/types/: auth.ts  item.ts  post.ts  user.ts
frontend/src/validators/: formData.ts
scripts/: check-setup.sh  reset-backend.sh
(+7 files in other folders)
